feat: weather add, languages add

--- a/fancy-weather/src/helpers/localizations/be.json
+++ b/fancy-weather/src/helpers/localizations/be.json
@@ -1,6 +1,5 @@
 {
   "placeholder": "Увядзіце горад",
-  "search": "пошук",
   "feel": "Адчуваецца як:",
   "wind": "Вецер:",
   "ms": "м/с",
@@ -22,7 +21,7 @@
   ],
   "lat": "Шырата",
   "lng": "Даўгата",
-  "wether": {
+  "weather": {
     "200": "Навальніца з невялікім дажджом",
     "201": "Навальніца з дажджом",
     "202": "Навальніца з праліўным дажджам",
