--- a/fancy-weather/src/helpers/localizations/ru.json
+++ b/fancy-weather/src/helpers/localizations/ru.json
@@ -1,6 +1,5 @@
 {
   "placeholder": "Введите город",
-  "search": "поиск",
   "feel": "Ощущается как:",
   "wind": "Ветер:",
   "ms": "м/с",
@@ -22,7 +21,7 @@
   ],
   "lat": "Широта",
   "lng": "Долгота",
-  "wether": {
+  "weather": {
     "200": "Гроза с небольшим дождем",
     "201": "Гроза с дождем",
     "202": "Гроза с проливным дождем",
